--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description: 微我无酒，以敖以游。
 avatar: https://raw.githubusercontent.com/CharlotteLiu223/charlotteliu/master/images/pagelogo.png
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://raw.githubusercontent.com/CharlotteLiu223/charlotteliu/master/images/favicon.png
+favicon: https://raw.githubusercontent.com/CharlotteLiu223/charlotteliu/master/images/pagefavicon.png
 
 
 # 菜单中的按钮
@@ -39,22 +39,8 @@ excerpt_separator: <!-- more -->
 
 # 你的社交网络链接，它们会作为图标出现在你的网站页脚中，可选填写
 footer-links: 
-  weibo: frommidworld #请输入你的微博个性域名 https://www.weibo.com/<thispart>
-  behance: # https://www.behance.net/<>
-  dribbble: # https://dribbble.com/<>
-  email: fromendworld@outlook.com 
-  facebook: #https://www.facebook.com/<>
-  flickr: #https://www.flickr.com/<>
-  github: FromEndWorld/loffer #https://github.com/<>
-  instagram: #https://instagram.com/<>
-  linkedin: #https://www.linkedin.com/in/<>
-  pinterest: #https://www.pinterest.com/<>
-  rss: #随便填点啥RSS就能用了
-  stackoverflow: # http://stackoverflow.com/<>
-  tumblr: # https://<username>.tumblr.com
-  twitter: # https://www.twitter.com/<your_twitter_username> 
-  youtube: # channel/<your_long_string> or user/<user-name>
-
+  email: charlotteliu223@hotmail.com
+  
 # 站点页脚的文字
 footer-text: Copyright (c) 2019 雨山的主页
 
@@ -79,7 +65,7 @@ url:
 # 添加你的博客的二级域名，一般来说是你的repository名
 # 如果你的博客的URL是：(http://yourusername.github.io/repository-name)
 # 那么就写成 "/repository-name"
-baseurl: /LOFFER
+baseurl: /charlotte
 
 
 #
